# ds_and_algos

./: .gitignore  Linear Search  Makefile  README  binary search.cpp  bubble sort.cpp  default_operators.hpp  ideas  input  issues  kruskal  kruskal.cpp  kruskal.h  kruskal_tests  kruskal_tests.cpp
.github/workflows/: c-cpp.yml
c/: CMakeLists.txt  main  main.c  threading.c
cpp/: Makefile  adjlist.h  adjmatrix.h  apollo.cpp  binary_tree.h  binary_tree_depth.cpp  cheatsheet.cpp  cpp20.cpp  dfs.cpp  divide-two-integers.cpp  everything.h  fast_io.cpp  general.h  generate-parentheses.cpp  goldcast.cpp  graph.h  graph_square.cpp  indexed_priority_queue.cpp  indexed_priority_queue.hpp  josephus.cpp  knight_phone.cc  knight_phone_prod.cc  kruskal.h  longest-valid-parenthesis.cpp  longest-valid-parenthesis2.cpp  merkle-tree.h  permutations_without_duplicates.cpp  permutations_without_duplicates_v2.cpp  practice.cpp  producer-consumer.cpp  qrt.cpp  random_object_generator.h  rubrik.cpp  sample_boost.cpp  sieve.cpp  substring-with-concatenation-of-all-words.cpp  threading.cpp  threding.cpp  threesum.cpp  tracer.h  (+1 more)
cpp/codechef/: BINTOUR.cpp  CSUB.cpp  MIKE3.cpp  OJUMPS.cpp  PROSUM.cpp  TMSLT.cpp  WALK.cpp  big_exponent.h  big_exponent_test.cpp  large_input.cpp  large_input_getchar_unlocked.cpp  large_input_scanf.cpp
cpp/distributed_systems/: CMakeLists.txt  README.md
cpp/distributed_systems/include/: distributed_system.h
cpp/distributed_systems/src/: distributed_system.cpp
cpp/distributed_systems/tests/: distributed_system.t.cpp
cpp/edit_distance/: input  levenshteinDistance.cpp  strings.h
cpp/euler/: primes.h  primes.h.gch  problem_50_consecutive_prime_sum.cpp  problem_64_sqrt_count.cc
cpp/geeks/: CMakeLists.txt  hello_test.cc  increment_decrement.cpp  increment_decrement.tsk  print_all_binary.cpp  print_all_binary.h  print_all_binary.tsk
cpp/interviews/: CMakeLists.txt  Watchfile  auto-rebuild.sh
cpp/interviews/include/: atlassian.h  interviews.h
cpp/interviews/src/: atlassian.cpp  interviews.cpp
cpp/interviews/tests/: atlassian.t.cpp  interviews.t.cpp
cpp/language/: Person.cpp  Person.h  PersonMain.cpp
cpp/leetcode/: add-two-numbers.cpp  container-with-most-water.cpp  find-first-and-last-position-of-element-in-sorted-array.cpp  find-median-from-data-stream.cpp  kth-largest-element-in-an-array.cpp  leetcode.cpp  meeting-rooms-ii.cpp  sudoku-solver.cpp  thetradedesk.cpp  thetradedesk2.cpp  top-k-frequent-elements.cpp  ugly-number-ii.cpp  vertical  vertical-order-traversal-of-a-binary-tree.cpp  wildcard-matching.cpp  workspan.cpp
cpp/problems/: CMakeLists.txt  README.md
cpp/problems/src/: main.cpp
cpp/problems/src/tests/: arithmetic_test.cpp  calculator_test.cpp  leafnodes_test.cpp  timemap_test.cpp
cpp/trivia/: currency_conversion.cpp  remove_duplicates_one_pass.cpp  remove_duplicates_without_extra_memory.cpp
cpp/trivia/one_to_hundred/: alarm.cpp  file.cpp  file2.cpp  file_descriptor.cpp  goto.cpp  grunt.cpp  mmap.cpp  preprocessor.cpp  recursion.cpp  signals.cpp  static_variable.cpp  template_metaprogramming.cpp
java/: Makefile
java/Algorithms/input/: patternmatch
java/Algorithms/src/: Main.java
java/Algorithms/src/dp/: LongestCommonSubsequence.java  LongestIncreasingSubSequence.java
java/Algorithms/src/math/: Tests.java  Util.java
java/Algorithms/src/recursion/: ReverseStack.java  ReverseWords.java
java/Algorithms/src/string/: PatternMatcher.java
java/Algorithms/src/tree/: BinaryTree.java  (+3 more)
machine_learning/iris/: iris.cpp  iris.in  iris_training.in
python/: .fuse_hidden00001e8e00000003  .fuse_hidden00001e9500000001  .josephus.py.swp  .kruskal.py.swp  .kruskal_tests.py.swp  README  input  josephus.py  kruskal.py  kruskal_tests.py  stocks.py  stocks_input
python/matrix_chain_multiplication/: matrix_chain.py  matrix_chain_doc  matrix_chain_input
python/sort/: sort_algo.py  test_sort.py
python/string_matching/: kmp.py  rabin_karp.py  string_matching_doc  string_matching_input
rust/: main  main.rs  mylib.rs
(+6 files in other folders)
